# websearcher

./: .gitignore  README.md  README.rst  arg_reader.py  args.txt  concatenate_regex.py  download_web.py  get_suggested_spellings.py  get_top_hits.py  pyproject.toml  requirements.txt  run_tests  search_web.py  test_arg_reader.py  test_args.txt  test_file_writer.py  test_page_reader.py  test_web_downloader.py  test_web_downloader_arg_reader.py  test_web_searcher.py  test_web_searcher_arg_reader.py
data/downloads/: httppython.org  httpswww.google.com#q=python  (+2 more)
test_args/: web_downloader_args.txt  web_searcher_args.txt
test_data/: web_downloader_args.txt
tests/: test_file_writer.py  test_page_reader.py  test_spelling_suggester.py  test_spelling_suggester_arg_reader.py  test_spelling_suggestions.py  test_suggested_spelling.py  test_suggested_spellings_arg_reader.py  test_web_downloader.py  test_web_downloader_arg_reader.py  test_web_searcher.py  test_web_searcher_arg_reader.py
websearcher/: arg_reader.py  browser_driver.py  concatenate_regex.py  download_web.py  file_writer.py  get_suggested_spellings.py  get_top_hit.py  page_reader.py  regex_search.py  regexsearch.py  search_web.py  spelling_suggester.py  spelling_suggester_arg_reader.py  spelling_suggestions.py  suggested_spelling.py  suggested_spellings.py  suggested_spellings_arg_reader.py  top_hit.py  top_hit_arg_reader.py  top_hits.py  web_downloader.py  web_downloader_arg_reader.py  web_searcher.py  web_searcher_arg_reader.py
websearcher_inputs_test/: urls.txt  web_downloader_args.txt  web_searcher_args.txt
(+16 files in other folders)
