[tool.poetry]
name = "websearcher"
version = "0.1.0"
description = ""
authors = ["beepscore <support@beepscore.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
