[tool.poetry]
name = "websearcher"
version = "0.1.1"
description = ""
authors = ["beepscore <support@beepscore.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
requests = "^2.31.0"
selenium = "^3.141.0"
urllib3 = "^1.26.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry^1.6"]
build-backend = "poetry.masonry.api"
